# rust-arduino

./: Cargo.toml  Ravedude.toml
arduino-nano/: Cargo.toml  Ravedude.toml
arduino-nano/src/: main.rs
arduino-nano/src/sensor/: LedSensor.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  logger.rs
common/src/logger/: logger.rs  mod.rs  ufmt_logger.rs
common/src/sensor/: led_sensor.rs  mod.rs  open_close_sensor.rs
graphics/: Cargo.toml
graphics/src/: lib.rs
graphics/src/component/: circle.rs  component.rs  line.rs  mod.rs  pulsating_circle.rs  rotating_square.rs  square.rs
graphics/src/math/: mod.rs  trigonometry.rs
graphics/src/renderer/: canvas.rs  flushable.rs  mod.rs  point.rs  renderer.rs  updatable.rs
graphics/src/renderer/embedded_graphics/: flushable_impl.rs  mod.rs  renderer_impl.rs
sensors/: Cargo.toml
sensors/src/: lib.rs
sensors/src/sensor/: led_sensor.rs  mod.rs  open_close_sensor.rs
src/: main.rs
src/component/: circle.rs  component.rs  line.rs  mod.rs  square.rs
src/geometry/: geometry.rs
src/math/: math.rs  mod.rs  point.rs  rotator.rs  trigonometry.rs
src/renderer/embedded_graphics/: flushable_impl.rs  mod.rs
