[package]
name = "arduino-nano"
version = "0.1.0"
authors = ["Roman Makeev <makeevrserg@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino-nano"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

embedded-graphics = "0.8"
display-interface-i2c = "0.5"
ssd1306 = "0.8"


graphics = { path = "../graphics", features = ["ssd1306", "embedded-graphics"] }
sensors = { path = "../common" }

[dependencies.avr-device]
version = "0.8.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-nano"]
